# intellij-aspect

./: .bazelrc  .licenserc.yaml  BUILD  MODULE.bazel  MODULE.bazel.bcr  README.md
.github/workflows/: ci.yml  release.yml
common/: BUILD  artifact_location.bzl  common.bzl  ide_info.bzl  make_variables.bzl
intellij/: aspect.bzl  provider.bzl  testing.bzl
modules/: cc_info.bzl  go_info.bzl  java_common_info.bzl  java_info.bzl  java_toolchain_info.bzl  jvm_info.bzl  kotlin_info.bzl  protobuf_info.bzl  provider.bzl  py_info.bzl  python_info.bzl  rules_proto_info.bzl  run_info.bzl  scala_info.bzl  test_info.bzl  top_level_targets.bzl
private/lib/: path.kt
private/rules/: aspect_lib.bzl
sdk/lib/: BUILD  aspectchoice.kt  config.kt  deploy.kt  readtarget.kt  transformers.kt  utils.kt
sdk/proto/: ide_info.proto
testing/fixtures/: BUILD
testing/fixtures/cpp/: BUILD
testing/fixtures/general/: BUILD
testing/fixtures/general/custom_rules/: BUILD.fix  rules.bzl
testing/fixtures/general/simple/: BUILD.fix  custom.bzl
testing/fixtures/go/: BUILD
testing/fixtures/java/: BUILD
testing/fixtures/java/forwardedArtifacts/forwarded/: BUILD.fix
testing/fixtures/java/resources/: BUILD.fix  Hello.java
testing/fixtures/kotlin/: BUILD
testing/fixtures/kotlin/simple/: BUILD.fix
testing/fixtures/proto/: BUILD
testing/fixtures/proto/old/consumerJava/: BUILD.fix  Main.java
testing/fixtures/proto/old/libA/: BUILD.fix  lib_a.proto
testing/fixtures/proto/old/libB/: BUILD.fix  lib_b.proto
testing/fixtures/python/: BUILD
testing/fixtures/scala/: BUILD
testing/rules/: BUILD  bazel.bzl  config.bzl  defs.bzl  fixture.bzl
testing/rules/fixture/: BUILD  builder.kt  fixture.kt  fixture.proto
testing/rules/worker/: BUILD  builder.kt  sandbox.kt  worker.kt  worker.proto
testing/tests/cpp/: AbseilTest.kt  LayoutTest.kt  ToolchainTest.kt
testing/tests/general/: BUILD  CustomRuleTest.kt  GeneralTest.kt
testing/tests/go/: BUILD
testing/tests/java/: BUILD  ForwardTest.kt  PluginTest.kt  ResourcesTest.kt  SimpleTest.kt
testing/tests/kotlin/: AssociatesTest.kt  BUILD  KspTest.kt  ResourcesTest.kt  SimpleTest.kt
testing/tests/lib/: BUILD  DeployFileTest.kt  DeployTest.kt  utils.kt
testing/tests/proto/: BUILD  SimpleTest.kt
testing/tests/python/: PyBinaryTest.kt  PyLibraryTest.kt  PyTestTest.kt  SimpleTest.kt  WithImportsTest.kt
testing/tests/scala/: SimpleTest.kt
tools/deploy/: main.kt
tools/differ/: compare.kt  main.kt  workspace.kt
